// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PinCodeDigit /> when digit is entered 1`] = `
<View
  center={true}
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#ffffff",
      "borderBottomWidth": 5,
      "height": 66,
      "justifyContent": "center",
      "marginHorizontal": 5,
      "width": 38,
    }
  }
  testID={undefined}
>
  <Image
    resizeMode="contain"
    source={1}
    style={
      Object {
        "height": 26,
        "width": 26,
      }
    }
  />
</View>
`;

exports[`<PinCodeDigit /> when digit is not entered 1`] = `
<View
  center={true}
  style={
    Object {
      "alignItems": "center",
      "borderBottomColor": "#f79347",
      "borderBottomWidth": 5,
      "height": 66,
      "justifyContent": "center",
      "marginHorizontal": 5,
      "width": 38,
    }
  }
  testID={undefined}
/>
`;
